Add verified Coq/Rocq formalization of CST
- CST.v: Existence proof (6-tuple, 3 axioms, constructive witness)
  Verified on Rocq Prover 9.0.1

- CST_Minimality.v: Full minimality proofs
  5 ablation theorems (NoT, NoS, NoF, NoJ, NoOplus)
  1 non-formation theorem (NoPhi)
  Master theorem combining all 6

- Updated main README with multi-language section
- Updated .gitignore with Coq build artifact patterns

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,14 @@ lake-packages/
 *.c
 *.o
 
+# Coq/Rocq build artifacts
+*.vo
+*.vok
+*.vos
+*.glob
+*.aux
+.lia.cache
+
 # IDE state (do not track)
 .antigravity/
 .gemini/
