Add coalgebraic CST formalization with final coalgebra proof
- CST_Coalgebraic.lean: Core coalgebra definition (H_CST endofunctor,
  CSTCoalgebra class, existence witness, bisimulation, ablation results,
  master minimality theorem). Zero errors, zero warnings.

- universality abstract proofs coalgebra.lean: Abstract universality proof
  showing all six structural requirements hold for any CSTCoalgebra
  (Aristotle-generated, verified clean).

- final coalgebra for cst final version.lean: Proof of the terminal
  coalgebra (νH_CST). Defines FinalCSTCoalgebraSet as a subtype of
  path-indexed NodeData trees. Constructs terminal_map and proves
  final_coalgebra_universality: every CSTCoalgebra has a unique
  homomorphism into the final system. Zero errors.

Co-authored-by: Aristotle (Harmonic) <aristotle-harmonic@harmonic.fun>

--- a/lakefile.toml
+++ b/lakefile.toml
@@ -1,6 +1,6 @@
 name = "aristotle_solves_cst"
 version = "0.1.0"
-defaultTargets = ["CST_Verified", "Minimality"]
+defaultTargets = ["CST_Verified", "Minimality", "CST_Coalgebraic"]
 
 [[require]]
 name = "mathlib"
@@ -13,6 +13,9 @@ name = "CST_Verified"
 
 [[lean_lib]]
 name = "Minimality"
+
+[[lean_lib]]
+name = "CST_Coalgebraic"
 
 [[lean_exe]]
 name = "aristotle_solves_cst"
